# sudoku-generator

./: .gitignore  Dockerfile  README.md  deploy.sh  pyproject.toml  run_web.py
scripts/: benchmark.py  check.py
src/sudoku/: app.py  core.py  generator.py  main.py  solver.py
src/sudoku/templates/: index.html
terraform/: backend.tf  main.tf  outputs.tf  variables.tf
tests/: test_app.py
